--- a/EBC_App/www/css/style_exhibit2.css
+++ b/EBC_App/www/css/style_exhibit2.css
@@ -37,6 +37,13 @@
     position: absolute;
     z-index: 10;
 }
+#blackwire{
+    height: 630px;
+    margin-top: 6px;
+    margin-left: 35px;
+    position: absolute;
+    z-index: 10;
+}
 .prodImg{
     height: 450px;
     margin-top: 90px;
@@ -282,42 +289,42 @@ h3{
 }
 #spot4 {
     position: absolute;
-    margin-top: 55%;
-    left: 45%;
+    margin-top: 1%;
+    left: 43%;
     z-index:10;
 }
 #spot4-off {
     position: absolute;
-    margin-top: 63%;
-    left: 53%;
+    margin-top: 9%;
+    left: 51%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot5 {
     position: absolute;
-    margin-top: 88%;
-    left: 67%;
+    margin-top: 41%;
+    left: 28%;
     z-index:10;
 }
 #spot5-off {
     position: absolute;
-    margin-top: 96%;
-    left: 75%;
+    margin-top: 49%;
+    left: 36%;
     z-index:10;
     height: 10px;
     width: 10px
 }
 #spot6 {
     position: absolute;
-    margin-top: 8%;
-    right: 54%;
+    margin-top: 84%;
+    right: 36%;
     z-index:10;
 }
 #spot6-off {
     position: absolute;
-    margin-top: 16%;
-    right: 62%;
+    margin-top: 92%;
+    right: 43%;
     z-index:10;
     height: 10px;
     width: 10px
